# nanoflann-benchmark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  analyze_middlesplit.py  plot_baseline_vs_new_kitti.py  run_kitti_benchmark.sh  stats_middlesplit_baseline.csv  stats_middlesplit_new.csv
benchmarkTool/: CMakeLists.txt  alloc_benchmark.cpp  plot_real_kitti.m  run-real-kitti.sh  tool.py
benchmarkTool/randomTests/: CMakeLists.txt  benchmark_fastann_random.cpp  benchmark_flann_random.cpp  benchmark_libkdtree_random.cpp  benchmark_nanoflann_random.cpp  randomTests.py
benchmarkTool/realTests/: CMakeLists.txt  benchmark_fastann_real.cpp  benchmark_flann_real.cpp  benchmark_libkdtree_real.cpp  benchmark_middlesplit.cpp  benchmark_nanoflann_real.cpp  kitti.h  realTests.py
incrementalTests/: CMakeLists.txt  README.md  REPORT.md  analyze.py  async_rebalance.md  benchmark_incremental.cpp  common.h  fetch_ikdtree.sh  k_long.csv  kitti_loader.cpp  kitti_loader.h  plot_incremental.py
loopClosureTests/: CMakeLists.txt  README.md  bench_loopclosure.cpp  plot_loopclosure.py  run.sh  run_mulran.sh
loopClosureTests/results/: loopclosure.csv  perquery_00_w15_k8.csv  perquery_00_w50_k8.csv  perquery_00_w5_k8.csv  perquery_02_w15_k8.csv  perquery_02_w50_k8.csv  perquery_02_w5_k8.csv  perquery_05_w15_k8.csv  perquery_05_w50_k8.csv  perquery_05_w5_k8.csv  perquery_06_w15_k8.csv  perquery_06_w50_k8.csv  perquery_06_w5_k8.csv  perquery_08_w15_k8.csv  perquery_08_w50_k8.csv  perquery_08_w5_k8.csv  perquery_DCC01_w15_k8.csv  perquery_DCC01_w50_k8.csv  perquery_DCC01_w5_k8.csv  perquery_KAIST01_w15_k8.csv  perquery_KAIST01_w50_k8.csv  perquery_KAIST01_w5_k8.csv  perquery_Riverside01_w15_k8.csv  perquery_Riverside01_w50_k8.csv  perquery_Riverside01_w5_k8.csv
manifoldLibTests/: CMakeLists.txt  README.md  bench_manifold.cpp  plot_manifold_libs.py  run.sh
manifoldLibTests/results/: manifold_libs.csv
multiLibTests/: CMakeLists.txt  README.md  bench.cpp  datasets.h  plot_multilib.py  run.sh
multiLibTests/results/: multilib_bench.csv
overheadTests/: CMakeLists.txt  bench_overhead.cpp  compare.py  run.sh
overheadTests/results/: overhead_off.csv  overhead_on.csv
perf-tests/: analyze_thread_count.m  stats_raw_results-27_jun_2023.tar
perf-tests/nanoflann/: Makefile  test_n_thread_build.cpp
rrtTests/: CMakeLists.txt  README.md  bench_rrt_se2  bench_rrt_se2.cpp
rrtTests/results/: rrt_se2_20000.csv  rrt_se2_3000.csv
